--- a/dos33.html
+++ b/dos33.html
@@ -7860,7 +7860,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     015         LST OFF                                             </span>
                     016     ELSE
 3EAF:A0 03          017             LDY #<span class='n'>3</span>                                          ; <a class='magic' name='_3EAF'>magic number</a> IOB_OFFSET_VOL = $3
-3EB1:B1 48          018             STY (IOBPL),Y   VOLUME NUMBER IN IOB.
+3EB1:B1 48          018             LDA (IOBPL),Y   VOLUME NUMBER IN IOB.
 3EB3:85 41          019             STA NVOL        FOR FORMATTER.
 3EB5:A9 AA          020             LDA #$<span class='n'>AA</span>        SET Z-PAG LOC TO $AA FOR
 3EB7:85 3E          021             STA AA          TIME DEPENDENT REFERENCES.      ; *sigh* Because AA is _so_ descriptive ... WTF does <a class='v' href='#AA'>AA</a> stand for ?!?!
