--- a/dos33.html
+++ b/dos33.html
@@ -1043,7 +1043,7 @@ With that "legalese" out of the way ... enjoy the read!
                     00104 068 <a class='d' id='006F' name='ASHM2'      >ASHM2       </a>EQU $<span class='n'>6F</span>         ; AS HIGH MEM 2                 ; Applesoft Basic
                     00105 069 <a class='d' name='ASRNX'      >ASRNX       </a>EQU $<span class='n'>D6</span>         ;AS RUN-ONLY FLAG               ; Applesoft Basic
                     00106 070 <a class='d' name='ASONERR'    >ASONERR     </a>EQU $<span class='n'>D8</span>         ;AS ON-ERR GOTO FLAG            ; Applesoft Basic
-                    00107 071 <a class='d' name='ASLMEM'     >ASLMEM      </a>EQU <a class='v' href='#ASSOP'>ASSOP</a>       ; AS LOW MEM                    ; Applesoft Basic
+                    00107 071 <a class='d' name='ASLMEM'     >ASLMEM      </a>EQU <a class='v' href='#ASSOP'>ASSOP</a>       ; AS LOW MEM                    ; Applesoft Basic -- never referenced
                     00108 072 <a class='f' name='ASBRK1'     >ASBRK1      </a>EQU $<span class='e'>D865</span>       ; AS ROM BREAK                  ; Applesoft Basic
                     00109 073 <a class='f' name='ASBRK2'     >ASBRK2      </a>EQU $<span class='n'>1067</span>       ; AS RAM BREAK                  ; Applesoft Basic
                     00110 074 <a class='f' name='ASCNTU1'    >ASCNTU1     </a>EQU $<span class='e'>D43C</span>                                       ; ROM entry point
