--- a/dos33.html
+++ b/dos33.html
@@ -1419,7 +1419,7 @@ With that "legalese" out of the way ... enjoy the read!
                     027 <a class='d' name='CMDETB'>CMDETB      </a>EQU *                                           ; /sarcasm Yay for shitty 5 &amp; 6 letter var names!
 1D1E:4E 25          028             DW <a class='x' href='#EINIT' >EINIT</a>-<span class='n'>1</span>                                      ; [0] Stupid 6502 design for RTS instruction forces <span class="macro">-1</span> for func jump table
 1D20:12 24          029             DW <a class='x' href='#ELOAD' >ELOAD</a>-<span class='n'>1</span>                                      ; [1]
-1D22:96 23          030             DW <a class='x' href='#ESAVE '>ESAVE</a>-<span class='n'>1</span>                                      ; [2]
+1D22:96 23          030             DW <a class='x' href='#ESAVE' >ESAVE</a>-<span class='n'>1</span>                                      ; [2]
 1D24:D0 24          031             DW <a class='x' href='#ERUN'  >ERUN</a>-<span class='n'>1</span>                                       ; [3]
 1D26:EF 24          032             DW <a class='x' href='#ECHAIN'>ECHAIN</a>-<span class='n'>1</span>                                     ; [4]
 1D28:62 22          033             DW <a class='x' href='#EDEL'  >EDEL</a>-<span class='n'>1</span>                                       ; [5]
@@ -1622,7 +1622,7 @@ With that "legalese" out of the way ... enjoy the read!
 1E51:4C BF 1D       205 <a class='f' id='1E51' name='DBVECT'   >DBVECT      </a>JMP <a class='x' href='#DBRST'>DBRST</a>                                       ; $3D0: JMP $9DBF DOS Warm RESET -- <i>Really?? You couldn't put this in the SAME order</i>
 1E54:4C 84 1D       206 <!--                           -->            JMP <a class='x' href='#DBINIT' >DBINIT</a>                                      ; $3D3: JMP $9D84 DOS Cold RESET -- <i>as BASIC:</i> <b>Cold THEN Warm ???</b>
 1E57:4C FD 2A       207 <!--                           -->            JMP <a class='x' href='#USERENT'>USERENT</a> ;USER EXTERNAL ENTRY TO FILE MANAGER; $3D6: JMP $AAFD FM   (File Manager)
-1E5A:4C B5 37       208 <!--                           -->            JMP <a class='x' href='#DISKIO '>DISKIO</a>                                      ; $3D9: JMP $B7B5 RWTS (ReadWriteTrackSector)
+1E5A:4C B5 37       208 <meta                                 />            JMP <a class='x' href='#DISKIO' >DISKIO</a>                                      ; $3D9: JMP $B7B5 RWTS (ReadWriteTrackSector)
                     209 <a class='f' id='1E5D'name='CCBLDR'   >CCBLDR      </a>EQU *                                           ; $3DC: GetParamFM (A,Y = $B5BB, CCB = Command Control Block)
 1E5D:AD 0F 1D       210 <!--                           -->            LDA <a class='v' href='#CCBADR'>CCBADR</a>+<span class='n'>1</span>
 1E60:AC 0E 1D       211 <!--                           -->            LDY <a class='v' href='#CCBADR'>CCBADR</a>                                      ; <b>NOTE</b> The labels <span class='code'>CCBLDR</span> and <span class='code'>IOBLDR</span> are never referenced anywhere.
